added analysis to beginning of Pymaceuticals Jupyter Notebook

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -10,7 +10,13 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- More mice were treated with Ramicane and Capomulin, our drug of interest, than any other drug (with Propriva being the least used drug).\n",
+    "\n",
+    "- Ramicane performed better overall than Capomulin, but the difference is small. Both drugs, however, performed significantly better than the placebo, which suggests a real impact made by both drugs. \n",
+    "\n",
+    "- It is possible that other drugs may have performed better on their own given a larger sample size of mice, though I personally doubt it, as Propriva (the smallest sample size) reduced tumor volume on par with Infubinol, a drug that had about as many observed timepoints as the other mid-sample-size drugs.\n",
+    "\n",
+    "- There is a relatively strong positive correlation (0.84) between mouse weight and average tumor volume on the Capomulin treatment specifically. This could mean that higher-weight mice don't respond as well to the drug as their lower-weight counterparts. This being said, even the highest weight mouse on the Capomulin regimen had a lower average tumor volume than every other drug's average tumor volume (excluding Ramicane, which worked at about the same level as Capomulin).\n",
     " "
    ]
   },
